Changelog for plone.app.contentrules

    (name of developer listed in brackets)

plone.contentrules - 1.1 (April 20th, 2008)

    - Fix invalid leading space in all 'Up to Site Setup' links.
      [wichert]

plone.contentrules - 1.1.0a1

    - Fixed a small bug related to getTypeInfo() being acquired.
      http://dev.plone.org/plone/ticket/7385
      [optilude]

    - Fixed bug causing content rule actions/conditions to not be properly
      saved.
      http://dev.plone.org/plone/ticket/7909
      [optilude]

    - Merge PLIP 204 - GenericSetup support. A contentrules.xml file can now
      be used to import and export rule definitions and assignments.
      [optilude]

plone.app.contentrules - 1.0.5

    - Made absolute_url() work properly on the custom adding views. This is
      necessary for the <base /> URL to be set correctly.
      [optilude]

    - Made absolute_url() work across the namespace traversal adapters for
      rules, actions and conditions, at time resorting to some serious
      Cowboy Development.
      [optilude]

    - Adjusted tests for different payload in newer kss versions.
      [hannosch]

plone.app.contentrules - 1.0

    - Added i18n markup for the confirm_icon.gif alternate text. This closes
      http://dev.plone.org/plone/ticket/7062.
      [hannosch]

    - Changed the portal type condition to use the ReallyUserFriendlyTypes
      vocabulary. This closes http://dev.plone.org/plone/ticket/6911.
      [hannosch]

    - Initial package structure.
      [zopeskel]
